[gd_scene load_steps=3 format=3 uid="uid://2llhpgjqp727"]

[ext_resource type="Script" path="res://characters/SwordFighter/uiScripts/swordsman_select_button.gd" id="1_233dr"]
[ext_resource type="Texture2D" uid="uid://c1p6uyxgfdnf3" path="res://assets/sprites/sheets/SwordFighter/SwordCharacterSelect.png" id="2_4g8jn"]

[node name="Character" type="TextureRect"]
custom_minimum_size = Vector2(120, 80)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1160.0
offset_bottom = -640.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4g8jn")
expand_mode = 1
stretch_mode = 5
script = ExtResource("1_233dr")

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.309804, 0.317647, 0.329412)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Swordsman"
horizontal_alignment = 1
uppercase = true

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(120, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Control/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
